tools: BPF simulator
A very simple BPF simulator designed to make it easier to debug and
do automated testing of long and complicated BPF programs generated
by libseccomp.

This is an initial version with only a small subset of supported BPF
commands, however, it should be sufficient to simulate most, if not
all of the BPF programs generated by the current version of
libseccomp.

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -33,7 +33,7 @@ include ../macros.mk
 # configuration
 #
 
-TOOLS = bpf_disasm
+TOOLS = bpf_disasm bpf_sim
 
 #
 # targets
@@ -46,6 +46,9 @@ all: $(TOOLS)
 # XXX - find a better way to do this using $(TOOLS)
 
 bpf_disasm: bpf_disasm.c
+	$(COMPILE_EXEC)
+
+bpf_sim: bpf_sim.c
 	$(COMPILE_EXEC)
 
 clean:
