tests: add the static library as a dependency
Also remove some unnecessary includes in the src/ and tests/ Makefiles.

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -35,7 +35,6 @@ include ../macros.mk
 
 include ../version_info
 
-INCFLAGS := $(INCFLAGS) -I../include
 LDFLAGS := ../src/libseccomp.a
 
 TESTS = 01-allow \
@@ -57,6 +56,7 @@ all: $(TESTS)
 
 $(DEPS):
 	$(MAKEDEP_EXEC)
+	$(ADDDEP) $@ ../src/libseccomp.a
 
 $(TESTS):
 	$(COMPILE_EXEC)
