bpf: implement long jumps between blocks when necessary
Also include a new test to trigger the creation of long jumps in
the BPF code.

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -40,7 +40,8 @@ LDFLAGS := ../src/libseccomp.a
 TESTS = 01-allow \
 	02-basic \
 	03-basic-chains \
-	04-multilevel-chains
+	04-multilevel-chains \
+	05-long-jumps
 
 DEPS = $(TESTS:%=%.d)
 
