tests: add a new test to test the different return actions
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -41,7 +41,8 @@ TESTS = 01-allow \
 	02-basic \
 	03-basic-chains \
 	04-multilevel-chains \
-	05-long-jumps
+	05-long-jumps \
+	06-actions
 
 DEPS = $(TESTS:%=%.d)
 
