arch: add to the basic framework and introduce i386 specific files
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -34,7 +34,11 @@ include ../version_info
 LIB_STATIC = libseccomp.a
 LIB_SHARED = libseccomp.so.$(VERSION_RELEASE)
 
-OBJS = api.o arch.o db.o hash.o gen_pfc.o gen_bpf.o
+OBJS =  api.o db.o \
+	arch.o arch-i386.o \
+	hash.o \
+	gen_pfc.o gen_bpf.o
+
 DEPS = $(OBJS:%.o=%.d)
 
 #
