tests: add test case to test db infinite loop
Signed-off-by: Ashley Lai <adlai@us.ibm.com>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -42,7 +42,8 @@ TESTS = 01-allow \
 	03-basic-chains \
 	04-multilevel-chains \
 	05-long-jumps \
-	06-actions
+	06-actions \
+	07-db-bug-looping
 
 DEPS = $(TESTS:%=%.d)
 
