arch: simplify the arch dependent code quite a bit
In the majority of the cases, we don't need to implement full
functions when a simple #define will work.  We also probably don't
need to pass as many arguments as we are at present.

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -35,7 +35,7 @@ LIB_STATIC = libseccomp.a
 LIB_SHARED = libseccomp.so.$(VERSION_RELEASE)
 
 OBJS =  api.o db.o \
-	arch.o arch-i386.o arch-x86_64.o \
+	arch.o arch-i386.o \
 	hash.o \
 	gen_pfc.o gen_bpf.o
 
