db: optimize matching argument chain sub-trees and fix a few related bugs
This patch adds sub-tree optimization code to the filter DB; it
isn't the most elegant solution - it is fairly ham-fisted in a number
of ways - but it appears to work: identifying sub-tree matches both
in the existing argument chain tree and the new chain being inserted.

CHANGELOG:
 * v3: March 22, 2012
   - Added additional tests from Ashley.
   - Fixed the db_chain_one_nxt() macro.
   - Handle the case where we can't remove a node because it has
     multiple results, but we can remove an action.
 * v2: March 20, 2012
   - Extraced some of the fixes into separate patches to submit
     independently.
   - Leveraged the util_getopt() function in the sub-tree test.
 * v1: March 16, 2012
   - Initial draft.

CC: Ashley Lai <adlai@linux.vnet.ibm.com>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -41,7 +41,8 @@ TESTS = 01-allow \
 	04-multilevel-chains \
 	05-long-jumps \
 	06-actions \
-	07-db-bug-looping
+	07-db-bug-looping \
+	08-subtree-checks
 
 DEPS_OBJS = $(OBJS:%.o=%.d)
 DEPS_TESTS = $(TESTS:%=%.d)
