tests: Consolidate BPF/PFC getopt() test code
Each of the existing tests has getopt() code to determine whether
the test output should be bpf or pfc.  This patch consolidates that
code into a common src/obj.  A new utility file is introduced to
contain this code.  For now the utility file only contains the
bpf/pfc getopt() code, but can be expanded with additional common
test code in the future.

Signed-off-by: Corey Bryant <coreyb@linux.vnet.ibm.com>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -35,7 +35,9 @@ include ../macros.mk
 
 include ../version_info
 
-LDFLAGS := ../src/libseccomp.a
+OBJS = util.o
+
+LDFLAGS := ../src/libseccomp.a $(OBJS)
 
 TESTS = 01-allow \
 	02-basic \
@@ -45,7 +47,8 @@ TESTS = 01-allow \
 	06-actions \
 	07-db-bug-looping
 
-DEPS = $(TESTS:%=%.d)
+DEPS_OBJS = $(OBJS:%.o=%.d)
+DEPS_TESTS = $(TESTS:%=%.d)
 
 #
 # targets
@@ -53,16 +56,17 @@ DEPS = $(TESTS:%=%.d)
 
 .PHONY: clean
 
-all: $(TESTS)
+all: $(TESTS) $(OBJS)
 
--include $(DEPS)
+-include $(DEPS_TESTS) $(DEPS_OBJS)
 
-$(DEPS):
+$(DEPS_TESTS):
 	$(MAKEDEP_EXEC)
 	$(ADDDEP) $@ ../src/libseccomp.a
+	$(ADDDEP) $@ $(OBJS)
 
 $(TESTS):
 	$(COMPILE_EXEC)
 
 clean:
-	$(RM) -f $(DEPS) $(TESTS)
+	$(RM) -f $(DEPS_TESTS) $(DEPS_OBJS) $(TESTS) $(OBJS)
