tests: add a new test to test basic API errors
v2:
 - Update seccomp_syscall_priority(-1000, 1) rc check to support
   different errnos based on architecture (pmoore@redhat.com).

Signed-off-by: Corey Bryant <coreyb@linux.vnet.ibm.com>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -45,7 +45,8 @@ TESTS = 01-allow \
 	07-db-bug-looping \
 	08-subtree-checks \
 	09-syscall-priority-pre \
-	10-syscall-priority-post
+	10-syscall-priority-post \
+	11-basic-errors
 
 DEPS_OBJS = $(OBJS:%.o=%.d)
 DEPS_TESTS = $(TESTS:%=%.d)
