Adding support for dynamic library
The command for gcc was already implemented in macros.mk:

  LINK_LIB  = @echo " LD $@ "; $(GCC) $(LDFLAGS) -o $@ $^ -shared -Wl,-soname=$@;

All I had to do is update the src/Makefile to build it as dynamic
library as well.

Signed-off-by: Eduardo Otubo <otubo@linux.vnet.ibm.com>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -48,12 +48,15 @@ DEPS = $(OBJS:%.o=%.d)
 
 .PHONY: all clean
 
-all: $(LIB_STATIC)
+all: $(LIB_STATIC) $(LIB_SHARED)
 
 -include $(DEPS)
 
 $(LIB_STATIC): $(OBJS)
 	$(ARCHIVE)
+
+$(LIB_SHARED): $(OBJS)
+	$(LINK_LIB)
 
 clean:
 	$(RM) -f $(DEPS) $(OBJS) $(LIB_STATIC) $(LIB_SHARED)
