--- a/tests/Makefile
+++ b/tests/Makefile
@@ -29,8 +29,8 @@ include ../macros.mk
 # configuration
 #
 
+include ../version_info.mk
 -include ../configure.mk
-include ../version_info
 
 OBJS = util.o
 
