--- a/tests/Makefile
+++ b/tests/Makefile
@@ -47,7 +47,8 @@ TESTS = 01-allow \
 	09-syscall-priority-pre \
 	10-syscall-priority-post \
 	11-basic-errors \
-	12-basic-masked-ops
+	12-basic-masked-ops \
+	13-attrs
 
 DEPS_OBJS = $(OBJS:%.o=%.d)
 DEPS_TESTS = $(TESTS:%=%.d)
