doc: manpages for seccomp_gen_{bpf,pfc}()
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -41,6 +41,8 @@ MAN3 = \
 	man/man3/seccomp_rule_add.3 \
 	man/man3/seccomp_rule_add_exact.3 \
 	man/man3/seccomp_syscall_priority.3 \
+	man/man3/seccomp_gen_bpf.3 \
+	man/man3/seccomp_gen_pfc.3
 
 #
 # targets
