--- a/doc/Makefile
+++ b/doc/Makefile
@@ -42,7 +42,9 @@ MAN3 = \
 	man/man3/seccomp_rule_add_exact.3 \
 	man/man3/seccomp_syscall_priority.3 \
 	man/man3/seccomp_gen_bpf.3 \
-	man/man3/seccomp_gen_pfc.3
+	man/man3/seccomp_gen_pfc.3 \
+	man/man3/seccomp_attr_set.3 \
+	man/man3/seccomp_attr_get.3
 
 #
 # targets
