build: provide a build-time mechanism to update library install path
Signed-off-by: Kees Cook <keescook@chromium.org>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/libseccomp.pc.in
+++ b/libseccomp.pc.in
@@ -20,8 +20,8 @@
 #
 
 prefix=%%INSTALL_PREFIX%%
+libdir=%%INSTALL_LIBDIR%%
 includedir=${prefix}/include
-libdir=${prefix}/lib
 
 Name: libseccomp
 Description: The enhanced seccomp library
