build: minor Makefile cleanups
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -29,9 +29,9 @@ include ../macros.mk
 # configuration
 #
 
-include ../version_info.mk
-include ../configure.mk
-include ../install.mk
+include $(TOPDIR)/version_info.mk
+include $(TOPDIR)/configure.mk
+include $(TOPDIR)/install.mk
 
 MAN3 = \
 	man/man3/seccomp_init.3 \
