arch: add basic ARM support
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -41,6 +41,7 @@ OBJS = \
 	arch-i386.o arch-i386-syscalls.o \
 	arch-x86_64.o arch-x86_64-syscalls.o \
 	arch-x32.o arch-x32-syscalls.o \
+	arch-arm.o arch-arm-syscalls.o \
 	hash.o \
 	gen_pfc.o gen_bpf.o
 
