--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -22,6 +22,7 @@
 #ifndef _SECCOMP_H
 #define _SECCOMP_H
 
+#include <elf.h>
 #include <inttypes.h>
 #include <asm/unistd.h>
 #include <linux/audit.h>
@@ -114,6 +115,11 @@ struct scmp_arg_cmp {
  * be able to distinguish between x32 and x86_64
  */
 #define SCMP_ARCH_X32		(EM_X86_64|__AUDIT_ARCH_LE)
+
+/**
+ * The ARM architecture token
+ */
+#define SCMP_ARCH_ARM		AUDIT_ARCH_ARM
 
 /**
  * Convert a syscall name into the associated syscall number
@@ -1060,6 +1066,96 @@ int seccomp_export_bpf(const scmp_filter_ctx ctx, int fd);
 #ifndef __NR_vserver
 #define __NR_vserver		__PNR_vserver
 #endif /* __NR_vserver */
+
+#define __PNR_arm_fadvise64_64	-10083
+#ifndef __NR_arm_fadvise64_64
+#define __NR_arm_fadvise64_64	__PNR_arm_fadvise64_64
+#endif /* __NR_arm_fadvise64_64 */
+
+#define __PNR_arm_sync_file_range	-10084
+#ifndef __NR_arm_sync_file_range
+#define __NR_arm_sync_file_range	__PNR_arm_sync_file_range
+#endif /* __NR_arm_sync_file_range */
+
+#define __PNR_finit_module	-10085
+#ifndef __NR_finit_module
+#define __NR_finit_module	__PNR_finit_module
+#endif /* __NR_finit_module */
+
+#define __PNR_pciconfig_iobase	-10086
+#ifndef __NR_pciconfig_iobase
+#define __NR_pciconfig_iobase	__PNR_pciconfig_iobase
+#endif /* __NR_pciconfig_iobase */
+
+#define __PNR_pciconfig_read	-10087
+#ifndef __NR_pciconfig_read
+#define __NR_pciconfig_read	__PNR_pciconfig_read
+#endif /* __NR_pciconfig_read */
+
+#define __PNR_pciconfig_write	-10088
+#ifndef __NR_pciconfig_write
+#define __NR_pciconfig_write	__PNR_pciconfig_write
+#endif /* __NR_pciconfig_write */
+
+#define __PNR_sync_file_range2	-10089
+#ifndef __NR_sync_file_range2
+#define __NR_sync_file_range2	__PNR_sync_file_range2
+#endif /* __NR_sync_file_range2 */
+
+#define __PNR_syscall		-10090
+#ifndef __NR_syscall
+#define __NR_syscall		__PNR_syscall
+#endif /* __NR_syscall */
+
+#define __PNR_afs_syscall	-10091
+#ifndef __NR_afs_syscall
+#define __NR_afs_syscall	__PNR_afs_syscall
+#endif /* __NR_afs_syscall */
+
+#define __PNR_fadvise64		-10092
+#ifndef __NR_fadvise64
+#define __NR_fadvise64		__PNR_fadvise64
+#endif /* __NR_fadvise64 */
+
+#define __PNR_getpmsg		-10093
+#ifndef __NR_getpmsg
+#define __NR_getpmsg		__PNR_getpmsg
+#endif /* __NR_getpmsg */
+
+#define __PNR_ioperm		-10094
+#ifndef __NR_ioperm
+#define __NR_ioperm		__PNR_ioperm
+#endif /* __NR_ioperm */
+
+#define __PNR_iopl		-10095
+#ifndef __NR_iopl
+#define __NR_iopl		__PNR_iopl
+#endif /* __NR_iopl */
+
+#define __PNR_kcmp		-10096
+#ifndef __NR_kcmp
+#define __NR_kcmp		__PNR_kcmp
+#endif /* __NR_kcmp */
+
+#define __PNR_migrate_pages	-10097
+#ifndef __NR_migrate_pages
+#define __NR_migrate_pages	__PNR_migrate_pages
+#endif /* __NR_migrate_pages */
+
+#define __PNR_modify_ldt	-10098
+#ifndef __NR_modify_ldt
+#define __NR_modify_ldt		__PNR_modify_ldt
+#endif /* __NR_modify_ldt */
+
+#define __PNR_putpmsg		-10099
+#ifndef __NR_putpmsg
+#define __NR_putpmsg		__PNR_putpmsg
+#endif /* __NR_putpmsg */
+
+#define __PNR_sync_file_range	-10100
+#ifndef __NR_sync_file_range
+#define __NR_sync_file_range	__PNR_sync_file_range
+#endif /* __NR_sync_file_range */
 
 #ifdef __cplusplus
 }
