build: enable verbose building
This patch, along with some general Makefile cleanups, adds the
ability to display verbose build information if desired.  To perform
a verbose build, simple add "V=1" to the make command line as shown
below:

	# make V=1

The default remains the same, builds will be "quiet".

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -64,4 +64,4 @@ install: $(LIB_SHARED)
 	$(INSTALL_LIB_MACRO)
 
 clean:
-	$(RM) -f $(DEPS) $(OBJS) $(LIB_STATIC) $(LIB_SHARED)
+	$(RM) $(DEPS) $(OBJS) $(LIB_STATIC) $(LIB_SHARED)
