--- a/src/Makefile
+++ b/src/Makefile
@@ -37,8 +37,9 @@ LIB_STATIC = libseccomp.a
 LIB_SHARED = libseccomp.so.$(VERSION_RELEASE)
 
 OBJS = \
-	api.o db.o \
-	arch.o arch-i386.o \
+	api.o db.o arch.o \
+	arch-i386.o arch-i386-syscalls.o \
+	arch-x86_64-syscalls.o \
 	hash.o \
 	gen_pfc.o gen_bpf.o
 
