arch: provide the basic infrastructure for non-native architecture support
Add the arch_syscall_translate() function which converts the syscall
table from the native architecture to the desired architecture.

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -39,7 +39,7 @@ LIB_SHARED = libseccomp.so.$(VERSION_RELEASE)
 OBJS = \
 	api.o db.o arch.o \
 	arch-i386.o arch-i386-syscalls.o \
-	arch-x86_64-syscalls.o \
+	arch-x86_64.o arch-x86_64-syscalls.o \
 	hash.o \
 	gen_pfc.o gen_bpf.o
 
