tests: remove the 15-resolver test
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -49,8 +49,7 @@ TESTS = 01-allow \
 	11-basic-errors \
 	12-basic-masked-ops \
 	13-attrs \
-	14-reset \
-	15-resolver
+	14-reset
 
 DEPS_OBJS = $(OBJS:%.o=%.d)
 DEPS_TESTS = $(TESTS:%=%.d)
