build: quiet the build INFO messages during verbose builds
The ">> INFO: ..." messages aren't needed in verbose builds.

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -72,7 +72,7 @@ $(LIB_SHARED): $(OBJS)
 	$(LINK_LIB)
 
 python: $(LIB_STATIC)
-	@$(ECHO) ">> INFO: building in directory $@/ ..."
+	@$(ECHO_INFO) "building in directory $@/ ..."
 	@$(MAKE) -C $@
 
 install: $(LIB_SHARED)
