tests: test for missing syscalls on an architecture
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -1,4 +1,5 @@
 *.bpf
+*.pfc
 util.pyc
 01-allow
 02-basic
@@ -18,3 +19,4 @@ util.pyc
 16-arch-basic
 17-arch-merge
 18-basic-whitelist
+19-missing-syscalls
