tools: add a new architecture detection tool
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -35,7 +35,8 @@ LDFLAGS := ../src/libseccomp.a
 
 TOOLS = bpf_disasm \
 	bpf_sim \
-	sys_resolver
+	sys_resolver \
+	arch_detect
 
 DEPS = $(TOOLS:%=%.d)
 
