--- a/tests/Makefile
+++ b/tests/Makefile
@@ -58,7 +58,8 @@ TESTS = 01-sim-allow \
 	20-live-basic_die \
 	21-live-basic_allow \
 	22-sim-basic_chains_array \
-	23-sim-arch_all_basic
+	23-sim-arch_all_basic \
+	24-live-arg_allow
 
 DEPS_OBJS = $(OBJS:%.o=%.d)
 DEPS_TESTS = $(TESTS:%=%.d)
