tests: add 22-sim-basic_chains_array
Like 03-sim-basic_chains, but with seccomp_rule_add_array instead of
seccomp_rule_add.

Signed-off-by: Vitaly Vi Shukela <vi0oss@gmail.com>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -56,7 +56,8 @@ TESTS = 01-sim-allow \
 	18-sim-basic_whitelist \
 	19-sim-missing_syscalls \
 	20-live-basic_die \
-	21-live-basic_allow
+	21-live-basic_allow \
+	22-sim-basic_chains_array
 
 DEPS_OBJS = $(OBJS:%.o=%.d)
 DEPS_TESTS = $(TESTS:%=%.d)
