db: correctly compare syscall arguments on 64-bit systems
This patch corrects a number of problems on 64-bit systems that were
preventing us from correctly comparing the high 32-bit word of a
syscall argument in some cases.

Reported-by: Thiago Marcos P. Santos <tmpsantos@gmail.com>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -59,7 +59,8 @@ TESTS = 01-sim-allow \
 	21-live-basic_allow \
 	22-sim-basic_chains_array \
 	23-sim-arch_all_basic \
-	24-live-arg_allow
+	24-live-arg_allow \
+	25-sim-multilevel_chains_adv
 
 DEPS_OBJS = $(OBJS:%.o=%.d)
 DEPS_TESTS = $(TESTS:%=%.d)
