tools: rename some of the tools in preparation for installation
Some of the tools are quite handy and would likely be useful for
developers incorporating libseccomp into their applications so let's
go ahead and namespace the tools in preparation for installing them.

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -33,10 +33,10 @@ include $(TOPDIR)/configure.mk
 
 LDFLAGS := ../src/libseccomp.a
 
-TOOLS = bpf_disasm \
-	bpf_sim \
-	sys_resolver \
-	arch_detect
+TOOLS = scmp_bpf_disasm \
+	scmp_bpf_sim \
+	scmp_sys_resolver \
+	scmp_arch_detect
 
 DEPS = $(TOOLS:%=%.d)
 
