build: initial attempt to use autotools as the build system
With my apologies to Jan for delaying this patch for so long, there
are a number of differences between Jan's original patch and what is
being merged in this patch; almost all of the changes are due to
changes in the underlying code base, but there are a few minor fixes
as well.

Signed-off-by: Jan Engelhardt <jengelh@inai.de>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,25 @@
 *~
-*.a
+*.la
+*.lo
 *.o
-*.d
-*.dtmp
+*.pc
 *.swp
 *.orig
+.deps
+.dirstamp
+.libs
 .stgit-*
 .stgitmail.txt
+Makefile
+Makefile.in
 cscope.*
 tags
-configure.h
-configure.mk
-version_info.mk
-version.h
-libseccomp.pc
+/autom4te.cache
+/aclocal.m4
+/build-aux
+/config.*
+/configure
+/configure.h*
+/libtool
+/m4
+/stamp-h1
