--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -35,9 +35,9 @@ extern "C" {
  * version information
  */
 
-#define SCMP_VER_MAJOR		%%VERSION_MAJOR%%
-#define SCMP_VER_MINOR		%%VERSION_MINOR%%
-#define SCMP_VER_MICRO		%%VERSION_MICRO%%
+#define SCMP_VER_MAJOR		@VERSION_MAJOR@
+#define SCMP_VER_MINOR		@VERSION_MINOR@
+#define SCMP_VER_MICRO		@VERSION_MICRO@
 
 /*
  * types
