build: fixup the "clean" portions of the build process
Reported-by: Kees Cook <keescook@chromium.org>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -85,8 +85,8 @@ install: $(LIB_SHARED)
 	done
 
 clean:
-	$(RM) $(DEPS) $(OBJS) $(LIB_STATIC) $(LIB_SHARED)
-	@for dir in $(BINDINGS); do \
+	$(RM) $(DEPS) $(OBJS) $(LIB_STATIC) libseccomp.so.*
+	@for dir in python; do \
 		$(MAKE) -C $$dir clean; \
 	done
 
