build: fix use of LIBFLAGS vs LDFLAGS
LIBFLAGS are for libraries and LDFLAGS are for linker arguments. Without
this change, externally defined LDFLAGS are not correctly imported into
the build.

Signed-off-by: Kees Cook <keescook@chromium.org>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -34,7 +34,7 @@ include $(TOPDIR)/configure.mk
 
 OBJS = util.o
 
-LDFLAGS := ../src/libseccomp.a $(OBJS)
+LIBFLAGS := ../src/libseccomp.a $(OBJS)
 
 TEST_PRIVATE = 00-test
 
