--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -122,6 +122,11 @@ struct scmp_arg_cmp {
 #define SCMP_ARCH_ARM		AUDIT_ARCH_ARM
 
 /**
+ * The MIPS architecture token
+ */
+#define SCMP_ARCH_MIPS		AUDIT_ARCH_MIPS
+
+/**
  * Convert a syscall name into the associated syscall number
  * @param x the syscall name
  */
@@ -1156,6 +1161,16 @@ int seccomp_export_bpf(const scmp_filter_ctx ctx, int fd);
 #ifndef __NR_sync_file_range
 #define __NR_sync_file_range	__PNR_sync_file_range
 #endif /* __NR_sync_file_range */
+
+#define __PNR_select		-10101
+#ifndef __NR_select
+#define __NR_select		__PNR_select
+#endif /* __NR_select */
+
+#define __PNR_vfork		-10102
+#ifndef __NR_vfork
+#define __NR_vfork		__PNR_vfork
+#endif /* __NR_vfork */
 
 #ifdef __cplusplus
 }
