arch: Add support for MIPS Little Endian
Add support for MIPS 32-bit (O32 ABI) Little Endian

Signed-off-by: Markos Chandras <markos.chandras@imgtec.com>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -125,6 +125,7 @@ struct scmp_arg_cmp {
  * The MIPS architecture token
  */
 #define SCMP_ARCH_MIPS		AUDIT_ARCH_MIPS
+#define SCMP_ARCH_MIPSEL	AUDIT_ARCH_MIPSEL
 
 /**
  * Convert a syscall name into the associated syscall number
