build: fix a number of build problems
There were three issues that needed fixing: LIBFLAGS was always being
cleared, tools/util.o was not being cleaned up correctly, and the arch
token for 32-bit x86 was not defined correctly for the tools.

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -67,4 +67,4 @@ install: $(TOOLS_INSTALL)
 	$(INSTALL_BIN_MACRO)
 
 clean:
-	$(RM) $(DEPS_TOOLS) $(DEPS_OBJS) $(TOOLS)
+	$(RM) $(DEPS_TOOLS) $(DEPS_OBJS) $(TOOLS) $(OBJS)
